kubernetes/vms/sophos/ingress.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: sophos-mgmt
  namespace: vms
  annotations:
    traefik.ingress.kubernetes.io/service.serversscheme: https
    traefik.ingress.kubernetes.io/service.serverstransport: vms-sophos-insecure-transport@kubernetescrd
spec:
  type: ClusterIP
  selector:
    kubevirt.io/vm: sophos-firewall
  ports:
    - name: https-mgmt
      port: 4444
      targetPort: 4444
    - name: ssh-mgmt
      port: 22
      targetPort: 22
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sophos-ingress
  namespace: vms
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web,websecure
    traefik.ingress.kubernetes.io/router.middlewares: default-https-redirect@kubernetescrd,default-admin-only-access@kubernetescrd
    traefik.ingress.kubernetes.io/service.passhostheader: "false"
spec:
  ingressClassName: traefik
  rules:
    - host: sophos.lambertlab.us
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: sophos-mgmt
                port:
                  number: 4444
